--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             
             <h3>Código generado:</h3>
-            <textarea id="quiz-output" class="quiz-output" readonly></textarea>
+            <textarea id="quiz-output" class="quiz-output" placeholder="El código que vas a obtener acá lo tenes que pegar como Objeto Web 2.0 en el texto." readonly></textarea>
             <button id="copiar-codigo">Copiar Código</button>
         </div>
     </div>
